[gd_scene load_steps=4 format=3 uid="uid://1mip36nc8ajx"]

[ext_resource type="Texture2D" uid="uid://dhcurl4u73yfd" path="res://assets/test/pawn.png" id="1_tql3e"]
[ext_resource type="Script" path="res://test/pawn.gd" id="2_1leuw"]
[ext_resource type="Texture2D" uid="uid://bpsy7b7b8nm0e" path="res://assets/test/cell_choice_fill.png" id="3_4u160"]

[node name="pawn" type="Node2D"]
script = ExtResource("2_1leuw")
color = "White"

[node name="pawnTexture" type="Sprite2D" parent="."]
texture = ExtResource("1_tql3e")
centered = false
offset = Vector2(0, 16)

[node name="pawnButton" type="Button" parent="."]
offset_right = 64.0
offset_bottom = 64.0
focus_mode = 0
flat = true

[node name="move_0" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -64)
texture = ExtResource("3_4u160")
centered = false

[node name="move_0Button" type="Button" parent="move_0"]
offset_right = 64.0
offset_bottom = 64.0
flat = true

[node name="move_1" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -128)
texture = ExtResource("3_4u160")
centered = false

[node name="move_1Button" type="Button" parent="move_1"]
offset_right = 64.0
offset_bottom = 64.0
flat = true

[node name="attack_0" type="Sprite2D" parent="."]
visible = false
position = Vector2(-64, -64)
texture = ExtResource("3_4u160")
centered = false

[node name="attack_0Button" type="Button" parent="attack_0"]
offset_right = 64.0
offset_bottom = 64.0
flat = true

[node name="attack_1" type="Sprite2D" parent="."]
visible = false
position = Vector2(64, -64)
texture = ExtResource("3_4u160")
centered = false

[node name="attack_1Button" type="Button" parent="attack_1"]
offset_right = 64.0
offset_bottom = 64.0
flat = true

[connection signal="mouse_entered" from="pawnButton" to="." method="_on_pawn_button_mouse_entered"]
[connection signal="mouse_exited" from="pawnButton" to="." method="_on_pawn_button_mouse_exited"]
[connection signal="pressed" from="pawnButton" to="." method="_on_pawn_button_pressed"]
[connection signal="pressed" from="move_0/move_0Button" to="." method="_on_move_0_button_pressed"]
[connection signal="pressed" from="move_1/move_1Button" to="." method="_on_move_1_button_pressed"]
[connection signal="pressed" from="attack_0/attack_0Button" to="." method="_on_attack_0_button_pressed"]
[connection signal="pressed" from="attack_1/attack_1Button" to="." method="_on_attack_1_button_pressed"]
